--- a/Product scraper/style.css
+++ b/Product scraper/style.css
@@ -22,7 +22,7 @@ header {
   padding-top: 10px;
   padding-bottom: 10px;
   border-radius: 50px;
-  background-color: #bbbbbb;
+  background-color: #f1f1f1;
 }
 
 .logo {
